manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: memgame
spec:
  replicas: 1
  selector:
    matchLabels:
      app: memgame
  template:
    metadata:
      labels:
        app: memgame
    spec:
      containers:
        - name: memgame
          image: lyr7d1h/memgame:latest
          ports:
            - containerPort: 5000
          resources:
            limits:
              memory: "200Mi"
              cpu: "1"
          volumeMounts:
            - name: sqlite-volume
              mountPath: /usr/db
      volumes:
        - name: sqlite-volume
          hostPath:
            path: "/home/docker/memgamedb"
